--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^3.6.4",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/csurf": "^1.9.36",
     "concurrently": "^4.1.2",
     "nodemon": "^1.19.2",
-    "ts-node": "^8.4.1"
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.4"
   },
   "dependencies": {
     "@types/express": "^4.17.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1"
   }
